--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build images
-        run: docker compose build
+        run: docker compose build --build-arg USE_NETFREE=false
 
       - name: Create test-results directory
         run: mkdir -p test-results
