--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       MONGO_URI: mongodb://mongo:27017
       MONGO_DB: oms
+      PAYMENT_MODE: mock
     depends_on:
       - mongo
     healthcheck:
