Add inline documentation and comments across API, CI, and tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+# Docker Compose configuration for running the API, database, and integration tests.
+# Used locally and in CI to provide a fully reproducible test environment.
 services:
   mongo:
+    # MongoDB service used by the API and tests
     image: mongo:7
     ports:
       - "27017:27017"
@@ -7,6 +10,7 @@ services:
       MONGO_INITDB_DATABASE: oms
 
   api:
+    # FastAPI application container
     build: ./api
     volumes:
       - ./api:/app
@@ -19,12 +23,14 @@ services:
     depends_on:
       - mongo
     healthcheck:
+      # Used by the tests service to wait until the API is ready
       test: ["CMD", "wget", "-qO-", "http://localhost:8000/health"]
       interval: 2s
       timeout: 2s
       retries: 30
 
   tests:
+    # Test runner container that executes pytest against the running API
     build: ./tests
     volumes:
       - ./tests:/tests
