--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -1,3 +1,4 @@
+# This workflow creates a git release tag only after the CI tests pass on main
 name: Release Tag
 
 on:
@@ -11,6 +12,7 @@ permissions:
 
 jobs:
   tag:
+    # Run only if the CI workflow completed successfully
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
@@ -18,6 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          # Full history is required in order to create and push git tags
           fetch-depth: 0
 
       - name: Create tag
